# HOI-Mod-Editor

./: LICENSE  README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: greet.rs  main.rs  mods.rs  theme.rs
src/css/: mods.css  settings.css  styles.css
src/javascript/: main.js  mods.js  settings.js
src/pages/: mods.html  settings.html
